<resources>
    <string name="app_name">Ryoko Travels</string>
    <string name="name">Ryokō Travels</string>
    <string name="agencia_de_viajes">Agencia de viajes</string>
    <string name="skip">Skip</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="btn_Iniciar">Iniciar</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registro_user">Registrar Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="primerAp">Primer Apellido</string>
    <string name="segundoAp">Segundo Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="fecha_nac">Fecha de nacimiento</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="title_activity_principal">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Agregar reserva</string>
    <string name="menu_gallery">Mis reservas</string>
    <string name="menu_slideshow">Cerrar sesión</string>

    <string name="fecha_inicio">Fecha de inicio</string>
    <string name="fecha_fin">Fecha de fin</string>
    <string name="destino">Destino</string>
    <string name="tipo">Tipo de transporte</string>

    <string-array name="tipo_transporte">
        <item>Selecciona una opción...</item>
        <item>Avión</item>
        <item>Camión</item>
    </string-array>

    <string name="alta_reserva">Revisar disponibilidad</string>
    <string name="busqueda">Da clic en alguna</string>
    <string name="Buscar"> ..Buscar</string>

    <string name="modificar">Modificar</string>

    <string name="cerrar">¿Esta seguro de Cerrar Sesion?</string>
    <string name="btn_cerrar">Aceptar</string>

</resources>