<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/r_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cajas"
        android:hint="@string/usuario"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/r_contraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contraseña"
        android:background="@drawable/cajas"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_user"
        app:layout_constraintWidth_percent=".8"/>

    <EditText
        android:id="@+id/nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cajas"
        android:hint="@string/nombre"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_contraseña"
        app:layout_constraintWidth_percent=".8"/>

    <EditText
        android:id="@+id/primerAp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/primerAp"
        android:background="@drawable/cajas"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        app:layout_constraintWidth_percent=".8"/>

    <EditText
        android:id="@+id/segundoAp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/segundoAp"
        android:background="@drawable/cajas"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primerAp"
        app:layout_constraintWidth_percent=".8"/>

    <EditText
        android:id="@+id/correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:background="@drawable/cajas"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segundoAp"
        app:layout_constraintWidth_percent=".8"/>

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_Iniciar"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/botones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo"
        app:layout_constraintWidth_percent=".8"/>

</androidx.constraintlayout.widget.ConstraintLayout>