<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cajas"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/usuario"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contraseña"
        android:paddingLeft="20dp"
        android:background="@drawable/cajas"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintWidth_percent=".8"/>

    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_Iniciar"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/botones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".7"
        app:layout_constraintWidth_percent=".8"/>

</androidx.constraintlayout.widget.ConstraintLayout>